# test_mujoco_docker_render

./: .flake8  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
model_xml_files/: pendulum.xml
scripts/: run_sim_script.py
src/: mujoco_interface.py
